# AetherRAT

./: CMakeLists.txt  README.md
cert/: key.in  key.pem
include/: certificate.h  controller.h  log.h  rsa.h
src/: main.c
src/app/: app.c
src/controller/: CMakeLists.txt  controller.c
src/controller/components/: certificate.c  rsa.c
src/core/: CMakeLists.txt
src/handler/: CMakeLists.txt
